--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
     "python.testing.pytestEnabled": false,
     "python.testing.promptToConfigure": false,
     "python.testing.unittestEnabled": false,
-    "python.testing.nosetestsEnabled": false
+    "python.testing.nosetestsEnabled": false,
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
